appId: ${MAESTRO_APP_ID}
---
- launchApp:
    clearState: false
    arguments:
      shouldSignOut: "true"
      useMaestroInit: "true"
- extendedWaitUntil:
    visible: "Sign up or log in"
    timeout: 30000
- tapOn: "Email Input"
- inputText: ${MAESTRO_TEST_EMAIL}
- tapOn: "Continue.*"
- inputText: ${MAESTRO_TEST_PASSWORD}
- tapOn: "Continue.*"
- extendedWaitUntil:
    visible:
      id: "search-button"
    timeout: 30000
