appId: ${MAESTRO_APP_ID}
---
- launchApp:
    clearState: true
    clearKeychain: true
    permissions: { all: deny }
- tapOn: "Log in.*"
- tapOn: "Continue with Email.*"
- inputText: ${MAESTRO_TEST_EMAIL}
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: "Password show password button"
- runFlow:
    when:
      platform: Android
    commands:
      - tapOn: "password"
- inputText: ${MAESTRO_TEST_PASSWORD}
- tapOn:
    id: "loginButton"
# Related to the issue https://github.com/mobile-dev-inc/maestro/issues/1227
# it avoids getting stuck on iOS modal asking to store the password
- runFlow:
    when:
      platform: iOS
      visible: "Would you like to save this password in your Keychain to use with apps and websites?"
    commands:
      - tapOn:
          id: "Home Grabber"
- assertVisible: "Activity"
