appId: ${MAESTRO_APP_ID}
---
- launchApp:
    clearState: true
    clearKeychain: true
- tapOn: "Sign up.*"
- tapOn: "Continue with Email.*"
- runScript:
    file: signup.js
- inputText: ${output.signup.email}
- tapOn: "Next.*"
- inputText: ${output.signup.password}
- tapOn: "Next.*"
- inputText: "Test McTest"
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: "checkbox of consent By checking this box, you consent to our Terms of Use, Privacy Policy, and Conditions of Sale."
- runFlow:
    when:
      platform: Android
    commands:
      - tapOn: "Accept terms and privacy policy, Check this element to accept Artsy's terms and privacy policy"
- tapOn: "Next.*"
