appId: ${MAESTRO_APP_ID}
---
- launchApp:
    clearState: false
    arguments:
      shouldSignOut: "true"
      useMaestroInit: "true"
- runScript:
    file: signup.js
- extendedWaitUntil:
    visible: "Sign up or log in"
    timeout: 30000
- tapOn: "Email Input"
- inputText: ${output.signup.email}
- tapOn: "Continue.*"
- assertVisible:
    id: "password"
- inputText: ${output.signup.password}
- tapOn: "Continue.*"
- inputText: "Test McTest"
- runFlow:
    commands:
      - tapOn: Accept terms and privacy policy checkbox
- tapOn: "Continue.*"
- assertVisible: "Where are you in your art collecting journey?"
